<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/mjolnirButton"
        android:layout_width="410dp"
        android:layout_height="737dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/battle1_text2" />


</androidx.constraintlayout.widget.ConstraintLayout>